--- a/generator/templates/slatekit/lib/package.json
+++ b/generator/templates/slatekit/lib/package.json
@@ -7,13 +7,11 @@
   "keywords": ["slatekit", "app"],
   "type": "config",
   "actions": [
-    { "type": "copy", "doc": "Conf", "source": "/conf/env.conf"    , "target": "/src/main/resources/env.conf"     },
-    { "type": "copy", "doc": "Conf", "source": "/conf/env.loc.conf", "target": "/src/main/resources/env.loc.conf" },
-    { "type": "copy", "doc": "Conf", "source": "/conf/env.dev.conf", "target": "/src/main/resources/env.dev.conf" },
-    { "type": "copy", "doc": "Conf", "source": "/conf/env.qat.conf", "target": "/src/main/resources/env.qat.conf" },
-    { "type": "copy", "doc": "Conf", "source": "/conf/env.pro.conf", "target": "/src/main/resources/env.pro.conf" },
-    { "type": "copy", "doc": "Conf", "source": "/conf/logback.txt" , "target": "/src/main/resources/logback.xml"  }
+    { "name": "copy", "type": "Build", "source": "/build.txt"   , "target": "/build.gradle"                },
+    { "name": "copy", "type": "Build", "source": "/settings.txt", "target": "/settings.gradle"             },
+    { "name": "copy", "type": "Code" , "source": "/src/Lib.txt" , "target": "/src/main/kotlin/${app.packagePath}/Lib.kt" }
   ],
   "dependencies": {
+    "common": "1.0.0"
   }
 }
