--- a/generator/conf/env.conf
+++ b/generator/conf/env.conf
@@ -41,7 +41,9 @@ log.name     = @{app.name}-@{env.name}-@{date}.log
 log.enabled  = true
 log.level    = info
 
-templates.dir = ../templates
+# Code Generator
+generation.source = usr://slatekit/generator/templates
+generation.output = usr://slatekit/generator/gen
 
 
 # DB Settings - defaulted to dev database
